# Api-Engine-Starter

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt
ml/: train.py
static/: index.html
