[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-engine-starter"
version = "0.1.0"
description = "Simple FastAPI starter for students to expose ML/DL models as APIs"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
